# bigi

./: .gitignore  LICENSE  README.md  action.yml  bigi-cli  out.graphml  package.json  pyproject.toml  requirements.txt  test.html
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  example-usage.yml.template  pr_blast_radius.yml
api/: __init__.py  index.py
bigi/: __init__.py  cli.py  constants.py  graph.py  html_template.py  parser_generic.py  parser_nextflow.py  parser_python.py  parser_r.R  server.py
bigi/parsers/: generic.py  python.py  r_parser.R  snakemake.py
bigi/render/: html_template.py  template.html
physics_wasm/src/: lib.rs
scripts/: build_wasm.py
test_pipeline/: Snakefile
test_pipeline/scripts/: normalize.R  plot.R  preprocess.R
tests/: test_comprehensive.py  test_parsers.py  test_vercel.py
web/: next.config.ts  package.json  requirements.txt
web/api/: index.py
web/src/app/: page.tsx
web/src/app/[owner]/[repo]/: route.ts
