[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigi"
version = "1.0.1"
description = "BiGI: Blast-radius Impact Graph Indexer — Universal Software Pipeline Intelligence & Static Analysis."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "networkx",
    "flask",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/AtlasMindAI/bigi"
Source = "https://github.com/AtlasMindAI/bigi"
Issues = "https://github.com/AtlasMindAI/bigi/issues"

[project.scripts]
bigi = "bigi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bigi*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.R"]
